# claude-eyes

./: LICENSE  README.md  README_en.md  README_zh.md  pyproject.toml
src/claude_eyes/: __init__.py  __main__.py  config.py  demo.py  hook.py  manager.py  panel.py  setup.py  start.py
tests/: test_hook.py
